Cleaned some stuff up, fiddled some stuff around Fixed a retarded copypasta bug in = and <>

--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@
 * work out how to make a prompt work
 * convert everything to use new_cell and rename it to cell
 * implementation of \ (buried inside WORD) seems to be incorrect
+* add other stacks -- return, compile
+* implement if/else/then to also work in interp mode
