Fixed bug where mem_init() was called without argument, leading to junk initial user memory size Cleaned up some stuff

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
   words like IF etc that are meaningless in interpreted mode and possibly have edge cases.
   then make do_colon check the flag before trying to run them and if they shouldn't be run
   then just no-op (and maybe print a warning)  <- sorta done, but needs more thought
-* debug primitives -- SEE, DUMP, etc
+* debug primitives -- DUMP, etc
 * proper test suite built around ASSERT
 
 
